--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 *,
 ::before,
 ::after {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
-
-body {
-  font-family: Montserrat, Helvetica, sans-serif;
-  background: #111;
+canvas {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: #7c141b;
 }
